fixing options.js build

--- a/app/options.html
+++ b/app/options.html
@@ -14,7 +14,9 @@ Tracker API Key. <a href="https://www.pivotaltracker.com/profile">Find it here. 
  <button id="clear">Clear Options</button>
 </p>
 
-<script src="scripts/options.js"></script>
+<!-- build:js scripts/options.js -->
+  <script src="scripts/options.js"></script>
+<!-- endbuild -->
 
 </body>
 </html>
